DigicielFull/force-app/main/default/objects/Weekly_ICT_Opportunity_Snapshot__c/fields/Amount_OTC__c.field-meta.xml
<CustomField>
    <fullName>Amount_OTC__c</fullName>
    <label>Amount (OTC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>