DigicielFull/force-app/main/default/objects/Weekly_ICT_Opportunity_Snapshot__c/fields/DigicelCountry__c.field-meta.xml
<CustomField>
    <fullName>DigicelCountry__c</fullName>
    <label>Digicel Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Bonaire</fullName>
            </value>
            <value>
                <fullName>BVI</fullName>
            </value>
            <value>
                <fullName>Cayman Islands</fullName>
            </value>
            <value>
                <fullName>Curaçao</fullName>
            </value>
            <value>
                <fullName>Dominica</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>FWI</fullName>
            </value>
            <value>
                <fullName>St. Martin</fullName>
            </value>
            <value>
                <fullName>St. Barths</fullName>
            </value>
            <value>
                <fullName>Indian Ocean</fullName>
            </value>
            <value>
                <fullName>Grenada</fullName>
            </value>
            <value>
                <fullName>Guyana</fullName>
            </value>
            <value>
                <fullName>Haiti</fullName>
            </value>
            <value>
                <fullName>Jamaica</fullName>
            </value>
            <value>
                <fullName>Panama</fullName>
            </value>
            <value>
                <fullName>Saint Kitts and Nevis</fullName>
            </value>
            <value>
                <fullName>Saint Lucia</fullName>
            </value>
            <value>
                <fullName>Saint Vincent and the Grenadines</fullName>
            </value>
            <value>
                <fullName>Suriname</fullName>
            </value>
            <value>
                <fullName>Trinidad and Tobago</fullName>
            </value>
            <value>
                <fullName>Turks and Caicos Islands</fullName>
            </value>
            <value>
                <fullName>Fiji</fullName>
            </value>
            <value>
                <fullName>Nauru</fullName>
            </value>
            <value>
                <fullName>PNG</fullName>
            </value>
            <value>
                <fullName>Samoa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>