DigicielFull/force-app/main/default/objects/Weekly_ICT_Opportunity_Snapshot__c/fields/Net_AOP_Installation_OTC__c.field-meta.xml
<CustomField>
    <fullName>Net_AOP_Installation_OTC__c</fullName>
    <label>Net AOP Installation OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>