DigicielFull/force-app/main/default/objects/Weekly_ICT_Opportunity_Snapshot__c/fields/of_Seats__c.field-meta.xml
<CustomField>
    <fullName>of_Seats__c</fullName>
    <label># of Seats</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>