DigicielFull/force-app/main/default/objects/Weekly_ICT_Opportunity_Snapshot__c/fields/Opp_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_Unique_ID__c</fullName>
    <label>Opp Unique ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>