DigicielFull/force-app/main/default/objects/Weekly_ICT_Opportunity_Snapshot__c/fields/Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Count__c</fullName>
    <label>Opportunity Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>